--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
           <ul class="recomendations-list">
             <li class="recomendations-list-item">
               <div class="recomendations-list-item-wrapper">
-                <img class="recomendations-list-item-img" src="images/house.svg" width="75" height="72" alt="дом">
-                <h3>Жильё</h3>
+                <!-- <img class="recomendations-list-item-img" src="images/house.svg" width="75" height="72" alt="дом"> -->
+                <h3 class="recomendations-list-item-header-house">Жильё</h3>
                 <p>
                   Рекомендуем пожить<br>
                   в настоящем мотеле,<br>
@@ -115,8 +115,8 @@
             </li>
             <li class="recomendations-list-item">
               <div class="recomendations-list-item-wrapper">
-                <img class="recomendations-list-item-img" src="images/food.svg" width="75" height="72" alt="бургер">
-                <h3>Еда</h3>
+                <!-- <img class="recomendations-list-item-img" src="images/food.svg" width="75" height="72" alt="бургер"> -->
+                <h3 class="recomendations-list-item-header-food">Еда</h3>
                 <p>
                   Всегда заказывайте<br>
                   топовый фирменный бургер, вы не разочаруетесь!</p>
@@ -124,8 +124,8 @@
             </li>
             <li class="recomendations-list-item">
               <div class="recomendations-list-item-wrapper">
-                <img class="recomendations-list-item-img" src="images/gift.svg" width="75" height="72" alt="подарок">
-                <h3>Сувениры</h3>
+                <!-- <img class="recomendations-list-item-img" src="images/gift.svg" width="75" height="72" alt="подарок"> -->
+                <h3 class="recomendations-list-item-header-gift">Сувениры</h3>
                 <p>
                   Не только китайского,<br>
                   но и настоящего местного производства!
@@ -206,7 +206,7 @@
                 </li>
                 <li class="arrival-departure-item">
                   <label class="modal-form-input-label" for="out">Дата выезда:</label>
-                  <input class="arrival-departure" type="text" id="out" value="1 сентября 2021" required>
+                  <input class="arrival-departure" type="text" id="out" value="1 сентября 2023" required>
                   <span class="error-message">На эти даты есть свободные номера. Пока есть.</span>
                   <button class="date-button" type="button"></button>
                 </li>
