--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </div>
     <div class="modal-container modal-container-close">
       <div class="modal modal-autorization">
-        <button class="modal-close-button">
+        <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
         </button>
         <section class="modal-content">
@@ -247,7 +247,7 @@
                 </li>
               </ul>
             </fieldset>
-            <button class="modal-form-button">Найти</button>
+            <button class="modal-form-button" type="submit">Найти</button>
           </form>
         </section>
       </div>
