добавляет изображения линии

--- a/index.html
+++ b/index.html
@@ -60,37 +60,37 @@
           <ul class="advantages-list">
             <li class="advantages-list-item">
               <div class="advantages-list-item-wrapper">
-                <h3 class="white-text">Настоящий городок</h3>
-                <div class="line"></div>
+                <h3 class="white-text line-after white">Настоящий городок</h3>
+                <!-- <div class="line"></div> -->
                 <p class="advantages-list-item-text white-text">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="advantages-list-item-img" src="images/town.jpg" width="800" height="385" alt="Город Седона.">
             </li>
             <li class="advantages-list-item">
               <div>
-                <h3>Небольшая площадь</h3>
-                <div class="line"></div>
+                <h3 class="line-after black">Небольшая площадь</h3>
+                <!-- <div class="line"></div> -->
                 <p class="advantages-list-item-text">Все достопримечательности находятся очень близко</p>
               </div>
             </li>
             <li class="advantages-list-item">
               <div>
-                <h3>Красивая дорога</h3>
-                <div class="line"></div>
+                <h3 class="line-after black">Красивая дорога</h3>
+                <!-- <div class="line"></div> -->
                 <p class="advantages-list-item-text">Ехать в Седону из Лаc-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="advantages-list-item">
               <div>
-                <h3>Мало туристов</h3>
-                <div class="line"></div>
+                <h3 class="line-after black">Мало туристов</h3>
+                <!-- <div class="line"></div> -->
                 <p class="advantages-list-item-text">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
             </li>
             <li class="advantages-list-item">
               <div class="advantages-list-item-wrapper">
-                <h3 class="white-text">Там есть<br> мост Дьявола</h3>
-                <div class="line"></div>
+                <h3 class="white-text line-after white">Там есть<br> мост Дьявола</h3>
+                <!-- <div class="line"></div> -->
                 <p class="advantages-list-item-text white-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
               <img src="images/grand-canyon.jpg" width="800" height="385" alt="Мост Дьявола.">
