--- a/index.html
+++ b/index.html
@@ -228,12 +228,7 @@
                   <div class="label-wrapper">
                     <label class="modal-form-input-label" for="child">Дети:</label>
                     <span class="tooltip">
-                      <button class="tooltip-toggle" type="button">
-                        <div class="info">
-                          <div class="info-icon-top"></div>
-                          <div class="info-icon-bottom"></div>
-                        </div>
-                      </button>
+                      <button class="tooltip-toggle" type="button"></button>
                       <span class="tooltip-text">
                         Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
                       </span>
