--- a/catalog.html
+++ b/catalog.html
@@ -222,7 +222,7 @@
                 <a class="hotel-information button" href="#">Подробнее</a>
                 <button class="button add-to-favorites" type="button">В избранное</button>
                 <span class="rating-stars two-stars"></span>
-                <spanp class="raiting-stars visually-hidden">2 из 5</spanp>
+                <span class="raiting-stars visually-hidden">2 из 5</span>
                 <span class="rating">Рейтинг: 5,0</span>
               </li>
             </ul>
