--- a/catalog.html
+++ b/catalog.html
@@ -25,24 +25,24 @@
               <a class="navigation-link navigation-list-curent-item" href="catalog.html">Гостиницы</a>
             </li>
           </ul>
-          <ul class="navigation-user-list">
-            <li class="navigation-user-list-item">
-              <a class="navigation-user-link" href="#">
-                <p class="visually-hidden">Поиск</p>
-                <img src="images/header/icon-search.svg" width="19" height="19" alt="лупа">
-              </a>
-            </li>
-            <li class="navigation-user-list-item">
-              <a class="navigation-user-link" href="#">
-                <p class="visually-hidden">Избранное</p>
-                <img src="images/header/icon-heart.svg" width="18" height="17" alt="сердце">
-                <span class="favorites-number">12</span>
-              </a>
-            </li>
-            <li class="navigation-user-list-item">
-              <a class="navigation-user-link navigation-link-button button" href="#">Хочу сюда!</a>
-            </li>
-          </ul>
+          <div class="navigation-user-wrapper">
+            <ul class="navigation-user-list">
+              <li class="navigation-user-list-item">
+                <a class="navigation-user-link" href="#">
+                  <p class="visually-hidden">Поиск</p>
+                  <img src="images/header/icon-search.svg" width="19" height="19" alt="лупа">
+                </a>
+              </li>
+              <li class="navigation-user-list-item">
+                <a class="navigation-user-link" href="#">
+                  <p class="visually-hidden">Избранное</p>
+                  <img src="images/header/icon-heart.svg" width="18" height="17" alt="сердце">
+                  <span class="favorites-number">12</span>
+                </a>
+              </li>
+            </ul>
+            <button class="navigation-user-button button" href="#">Хочу сюда!</button>
+          </div>
         </nav>
       </header>
 
