--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
         </section>
         <section class="advantages" data-test="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
-          <p class="advantages-first-p">Седона — небольшой городок в Аризоне,<br>
-            заслуживающий большего!</p>
+          <p class="advantages-first-p">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
           <p class="advantages-second-p">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="advantages-list">
             <li class="advantages-list-item">
@@ -66,19 +65,19 @@
               <img class="advantages-list-item-img" src="images/town.jpg" width="800" height="385" alt="Город Седона.">
             </li>
             <li class="advantages-list-item">
-              <div>
+              <div class="advantages-list-item-wrapper">
                 <h3 class="line-after black">Небольшая площадь</h3>
                 <p class="advantages-list-item-text">Все достопримечательности находятся очень близко</p>
               </div>
             </li>
             <li class="advantages-list-item">
-              <div>
+              <div class="advantages-list-item-wrapper">
                 <h3 class="line-after black">Красивая дорога</h3>
                 <p class="advantages-list-item-text">Ехать в Седону из Лаc-Вегаса совсем не скучно!</p>
               </div>
             </li>
             <li class="advantages-list-item">
-              <div>
+              <div class="advantages-list-item-wrapper">
                 <h3 class="line-after black">Мало туристов</h3>
                 <p class="advantages-list-item-text">Большинство едет в Гранд Каньон и толпится там</p>
               </div>
@@ -88,18 +87,17 @@
                 <h3 class="white-text line-after white">Там есть<br> мост Дьявола</h3>
                 <p class="advantages-list-item-text white-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
-              <img src="images/grand-canyon.jpg" width="800" height="385" alt="Мост Дьявола.">
+              <img class="advantages-list-item-img" src="images/grand-canyon.jpg" width="800" height="385" alt="Мост Дьявола.">
             </li>
           </ul>
         </section>
         <section class="recomendations" data-test="service">
           <h2 class="visually-hidden">Рекомендации</h2>
-          <p class="recomendations-first-p">Приезжайте в Седону отдохнуть<br>в комфорте и уюте!</p>
+          <p class="recomendations-first-p">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
           <p class="recomendations-second-p">Опытный персонал и качественное обслуживание!</p>
           <ul class="recomendations-list">
             <li class="recomendations-list-item">
               <div class="recomendations-list-item-wrapper">
-                <!-- <img class="recomendations-list-item-img" src="images/house.svg" width="75" height="72" alt="дом"> -->
                 <h3 class="recomendations-list-item-header-house">Жильё</h3>
                 <p>
                   Рекомендуем пожить<br>
@@ -110,7 +108,6 @@
             </li>
             <li class="recomendations-list-item">
               <div class="recomendations-list-item-wrapper">
-                <!-- <img class="recomendations-list-item-img" src="images/food.svg" width="75" height="72" alt="бургер"> -->
                 <h3 class="recomendations-list-item-header-food">Еда</h3>
                 <p>
                   Всегда заказывайте<br>
@@ -119,7 +116,6 @@
             </li>
             <li class="recomendations-list-item">
               <div class="recomendations-list-item-wrapper">
-                <!-- <img class="recomendations-list-item-img" src="images/gift.svg" width="75" height="72" alt="подарок"> -->
                 <h3 class="recomendations-list-item-header-gift">Сувениры</h3>
                 <p>
                   Не только китайского,<br>
