--- a/catalog.html
+++ b/catalog.html
@@ -46,7 +46,7 @@
         </nav>
       </header>
 
-      <main class="main-catalog main" data-test="main">
+      <main class="main" data-test="main">
         <div class="search-container">
           <div class="content-wrapper">
             <header class="main-inner-header">
