--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,7 @@
                 </a>
               </li>
             </ul>
-            <button class="navigation-user-button button" href="#">Хочу сюда!</button>
+            <button class="navigation-user-button button" type="button">Хочу сюда!</button>
           </div>
         </nav>
       </header>
