--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <h2 class="visually-hidden">Поиск отеля</h2>
           <p class="find-hotel-first-p">Заинтересовались?</p>
           <p class="find-hotel-second-p">Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <button class="button find-button">Поиск гостиницы в Седоне</button>
+          <button class="button find-button" type="button">Поиск гостиницы в Седоне</button>
         </section>
         <section class="mailing mailing-index" data-test="subscribe">
           <h2 class="visually-hidden">Подписка</h2>
